<resources>
    <string name="app_name">Consultorio</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Senha</string>
    <string name="submit_login">Entrar</string>
    <string name="login_subtitle">Faça o login para ter acesso a plataforma.</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="havent_registered_yet">Não tem uma conta? Cadastre-se</string>
    <string name="login_icon_description">Login Icon</string>
    <string name="register_title">Cadastre-se</string>
    <string name="register_subtitle">Crie sua conta e organize sua clínica</string>
    <string name="register_name">Nome</string>
    <string name="register_surname">Sobrenome</string>
    <string name="register_create_account_button">Criar conta</string>
    <string name="forgot_pass_button">Enviar</string>
    <string name="forgot_pass_title">Problemas para entrar?</string>
    <string name="forgot_pass_subtitle">Insira o seu email e enviaremos um link\npara você voltar a acessar a sua conta.</string>
    <string name="nav_menu_agenda">Agenda</string>
    <string name="nav_menu_pacientes">Pacientes</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="logout">Sair</string>
    <string name="profile_name">Marcelo Lindemberg</string>
    <string name="profile_email">lindembergmarcelo@gmail.com</string>
    <string name="new_patient_title">Cadastro de Pacientes</string>
    <string name="new_patient_subtitle">Preencha os dados do seu paciente\n e finalize o cadastro!</string>
    <string name="new_patient_name">Nome</string>
    <string name="contact_info_session">Dados de Identificação</string>
    <string name="new_patient_birthDate">Data de Nasc</string>
    <string name="new_patient_age">Idade</string>
    <string name="new_patient_gender">Sexo</string>
    <string name="gender_masc">Masculino</string>
    <string name="gender_fem">Feminino</string>
    <string name="address_session">Endereço</string>
    <string name="new_patient_street">Rua</string>
    <string name="new_patient_district">Bairro</string>
    <string name="new_patient_city">Cidade</string>
    <string name="new_patient_state">Estado</string>
    <string name="select_state">Selecione estado</string>
    <string name="new_patient_cep">CEP</string>
    <string name="new_patient_number">Numero</string>
    <string name="contact_session">Contatos</string>
    <string name="new_patient_phone">Telefone</string>
    <string name="new_patient_submit">Cadastrar</string>
    <string name="new_patient_secondary_phone">Whatsapp</string>
    <string name="patients_title">Seus Pacientes</string>
    <string name="patients_subtitle">Aqui você tem acesso a lista \nde todos os seus pacientes \ne pode gerenciá-los</string>
    <string name="search_patients">Pesquisar paciente</string>
    <string name="patient_details">Detalhes do paciente</string>
    <string name="register_new_patient">Novo paciente</string>
    <string name="register_new_patient_description">Adiciona novo paciente</string>
    <string name="empty_list_description">Lista Vazia</string>
    <string name="settings_edit_profile">Editar Perfil</string>
    <string name="settings_edit_password">Alterar senha</string>
    <string name="blank" />
    <string name="select_civil_status">Selecione estado civil</string>
    <string name="new_patient_civil_status">Estado Civil</string>
    <string name="patients_remove_dialgo_title">Você tem certeza de que deseja remover esse paciente?</string>
    <string-array name="states">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
        <item>DF</item>
    </string-array>
    <string-array name="civil_status">
        <item>Solteiro</item>
        <item>Casado</item>
        <item>Separado</item>
        <item>Divorciado</item>
        <item>Viúvo</item>
    </string-array>
</resources>